home page with buttons

--- a/home.html
+++ b/home.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
     <title>Home</title>
   </head>
-  <body></body>
+  <body>
+    <div class="jumbotron">
+      <h1 class="display-4 col-sm-12">Hot Restaurant</h1>
+      <p class="lead">
+        We only have 5 tables. Be sure to book your seat before they are all
+        gone!
+      </p>
+      <a class="btn btn-primary btn-lg view-tables" href="#" role="button"
+        >View Tables</a
+      >
+      <a class="btn btn-primary btn-lg make-reservation" href="#" role="button"
+        >Make Reservation</a
+      >
+    </div>
+  </body>
 </html>
