--- a/home.html
+++ b/home.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
@@ -11,8 +10,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Home</title>
   </head>
+
   <body>
     <div class="jumbotron">
       <h1 class="display-4 col-sm-12">Hot Restaurant</h1>
@@ -20,10 +21,16 @@
         We only have 5 tables. Be sure to book your seat before they are all
         gone!
       </p>
-      <a class="btn btn-primary btn-lg view-tables" href="#" role="button"
+      <a
+        class="btn btn-primary btn-lg view-tables"
+        href="./tables.html"
+        role="button"
         >View Tables</a
       >
-      <a class="btn btn-primary btn-lg make-reservation" href="#" role="button"
+      <a
+        class="btn btn-primary btn-lg make-reservation"
+        href="./reservations.html"
+        role="button"
         >Make Reservation</a
       >
     </div>
